# bridge

./: .gitignore  LICENSE  README.md  pyproject.toml  run_tests.sh
club_sites/palo_alto/: README.md  globals.d.ts  jsconfig.json  pabc-reservations.dom.test.js  pabc-reservations.features.test.js  pabc-reservations.test.js  pabc-reservations.user.js  package-lock.json  package.json  spec.md  tasks.md
convention_cards/: app.py  make_card.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tasks.md  verify_ui.mjs
convention_cards/.streamlit/: config.toml
flashcards/: LICENSE  spec.md  tasks.md
session_analysis/: __init__.py  assembly.py  assembly_test.py  blank_form_test.py  board_rotation.py  board_rotation_test.py  enums.py  extraction.py  extraction_prompt.md  extraction_prompt.py  extraction_schema.py  extraction_schema_test.py  extraction_test.py  frozen_model.py  glyphs.py  models.md  models.py  models_test.py  notation.py  notation_test.py  parsing.py  parsing_test.py  pyproject.toml  rule_grid.py  rule_grid_test.py  sheet_dewarp.py  sheet_dewarp_test.py  sheet_geometry.py  sheet_geometry_test.py  spec.md  strip_cutting.py  strip_cutting_test.py  strip_extraction.py  strip_extraction_test.py  tasks.md  test_notation.py  validation.py  validation_test.py  vision_model_invocation.py  vision_model_invocation_test.py  (+2 more)
session_analysis/scratch/: strip_extraction_experiment.py
