# Copyright 2026 Ilya Sherman (ishermandom@)
# SPDX-License-Identifier: MIT

[project]
name = "convention-cards"
version = "0.0.0"
description = "Merge a bridge convention card PDF with a fold-over reminder strip."
requires-python = ">=3.14"
dependencies = ["pypdf", "reportlab", "streamlit"]

[tool.uv]
package = false
