# Copyright 2026 Ilya Sherman (ishermandom@)
# SPDX-License-Identifier: MIT

[project]
name = "session-analysis"
version = "0.0.0"
description = "Digitizing handwritten bridge scoresheets and analyzing the session."
requires-python = ">=3.14"
dependencies = ["pydantic>=2"]

[tool.uv]
package = false
